# GDPlatform

./: .editorconfig  .gitignore  CMakeLists.txt  DoxyRun.bat  Doxyfile  GDPlatform.h  GDPlatform.sln  GDPlatform.vcxproj  GDPlatform.vcxproj.filters  build.bat
include/: WindowSetting.h  lib.h
include/System/: SystemSetup.h  WindowManager.h
src/: WinMain.cpp  WindowSetting.cpp
src/System/: WindowManager.cpp
